# cpp-sandbox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md
.github/workflows/: ci.yml
cmake/: PreventInSourceBuilds.cmake  cpp_sandboxConfig.cmake.in
include/cpp_sandbox/: StringConverter.hpp  gdal_util_library.hpp  sample_library0.hpp  sample_library1.hpp
src/: CMakeLists.txt
src/find_submatrix/: CMakeLists.txt  main.cpp
src/gdal_test/: CMakeLists.txt  main.cpp
src/gdal_util_library/: CMakeLists.txt  gdal_util_library.cpp
src/sample_executable0/: CMakeLists.txt  main.cpp
src/sample_library0/: CMakeLists.txt  sample_library0.cpp
src/sample_library1/: CMakeLists.txt  sample_library1.cpp
src/string_converter/: CMakeLists.txt  StringConverter.cpp
test/: CMakeLists.txt  tests.cpp
